--- a/problem/css/index.css
+++ b/problem/css/index.css
@@ -48,7 +48,10 @@
   font-family: 'Roboto Condensed 400';
 }
 
-body {}
+body {
+  height: 100vh;
+  width: 100vw;
+}
 
 #wrapper {
   display: flex;
@@ -122,7 +125,9 @@ body {}
 
 #others_filter {}
 
-#programmes {}
+#programmes {
+  height: fit-content;
+}
 
 .container,
 #top {
